[tool.poetry]
name = "alibi"
version = "0.1.0"
description = ""
authors = ["Tomohiro Inoue <55827264+tomoino@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
mecab = "^0.996.2"
Keras = "^2.4.3"
pandas = "^1.1.5"
matplotlib = "^3.3.3"
tensorflow = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
